--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script>document.write('<base href="' + document.location + '" />');</script>
     <title> inventory </title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <app-root>Loading...</app-root>
